# codex-provider-sync

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
Codex Provider Sync.app/Contents/: Info.plist
Codex Provider Sync.app/Contents/Resources/: icon.icns
codex-provider-gui/: package-lock.json  package.json
codex-provider-gui/src/: index.html  main.js  styles.css
codex-provider-gui/src-tauri/: Cargo.toml  tauri.conf.json
codex-provider-gui/src-tauri/src/: main.rs
codex-provider-sync/: CodexProviderSync.sln  README.md  README_EN.md  README_GUI_ZH.md  package-lock.json  package.json
codex-provider-sync/desktop/CodexProviderSync.App/: CodexProviderSync.App.csproj  MainForm.cs  Program.cs
codex-provider-sync/desktop/CodexProviderSync.Core/: AppConstants.cs  BackupService.cs  CodexHomeService.cs  CodexProviderSync.Core.csproj  CodexSyncService.cs  ConfigFileService.cs  LockService.cs  Models.cs  ProviderDiscoveryService.cs  SessionRolloutService.cs  SettingsService.cs  SqliteStateService.cs  TextFormatter.cs
codex-provider-sync/desktop/CodexProviderSync.Core.Tests/: CodexProviderSync.Core.Tests.csproj  CoreIntegrationTests.cs  LockServiceTests.cs  SettingsAndDiscoveryTests.cs  TestCodexHomeFixture.cs
codex-provider-sync/desktop/CodexProviderSync.Core/Properties/: AssemblyInfo.cs
codex-provider-sync/scripts/: publish-gui.ps1
codex-provider-sync/src/: backup.js  cli.js  coexist.js  constants.js  service.js  session-files.js  sqlite-state.js  watcher.js
codex-provider-sync/test/: sync-service.test.js
